[tool.poetry]
name = "aio-clients"
version = "0.1.0a2"
description = "Python aiohttp client"
authors = ["Denis Malin <denis@malina.page>"]
license = "MIT License"

readme = "README.md"

homepage = "https://github.com/skar404/aio-clients"
repository = "https://github.com/skar404/aio-clients"
documentation = "https://github.com/skar404/aio-clients"

packages = [
    { include = "aio_clients" }
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
