[tool.poetry]
name = "aio-clients"
version = "2.0.0"
description = "Python aiohttp client"
authors = ["Denis Malin <denis@malina.page>"]
license = "MIT License"

readme = "README.md"

homepage = "https://github.com/skar404/aio-clients"
repository = "https://github.com/skar404/aio-clients"
documentation = "https://github.com/skar404/aio-clients"

packages = [
    { include = "aio_clients" }
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
aiohttp = ">=3.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
coverage = "^6.4.4"
mypy = "^0.971"
flake8 = "^5.0.4"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120